fix style for namespace class map view when content overflow

--- a/docs/src/app/layout/views/namespaceMap/template/namespaceNode.css
+++ b/docs/src/app/layout/views/namespaceMap/template/namespaceNode.css
@@ -1,4 +1,10 @@
 
+  .ClassMap .content
+  {
+    overflow: auto;
+    overflow-y: visible;
+  }
+
   .ClassMap .ClassNode
   {
     margin: 0 0 0 10px;
